hide overflow on gameboard area. When too many moves available, the button was overflowing over into side areas.  This should be fixed, but for now hiding the overflow as it's unsightly.

--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -3,6 +3,7 @@
     height: 100vh;
 }
 .bgtable {
+    overflow: hidden;
     position: relative;
     height: 100%;
     background-image: url(../../assets/images/table01all.jpg); // blue
